--- a/pom.xml
+++ b/pom.xml
@@ -106,15 +106,15 @@
   <artifactId>maven-surefire-plugin</artifactId>
   <version>2.14.1</version>
   <configuration>
-  <suiteXmlFiles>
-  <suiteXmlFile>
-  testng.xml
-  </suiteXmlFile>
-  </suiteXmlFiles>
+ <includes>
+    <include>**/Run.java</include>
+ </includes>
   </configuration>
   </plugin>
     <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-compiler-plugin</artifactId>
+  <version>3.6.1</version>
   <configuration>
   <source>1.8</source>
   <target>1.8</target>
